--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@
         ctx = canvas.getContext("2d")
 
         def reset_game():
-            global enemies, bullets, enemy_bullets, showing_level_title, ENEMY_SPEED, game_over, level
+            global enemies, bullets, enemy_bullets, showing_level_title, ENEMY_SPEED, game_over, level, game_started
             enemies = [{"pos": [col * (ENEMY_SIZE + 10) + 50, row * (ENEMY_SIZE + 10) + 50], "img": faces[int(window.Math.random() * len(faces))]} for row in range(3) for col in range(8)]
             bullets = []
             enemy_bullets = []
             showing_level_title = True
             ENEMY_SPEED = 2 + level  # Increase enemy speed with level
             game_over = False
-            draw_level_title()
-            window.setTimeout(start_game, 1000)  # Show level title for 1 second
+            game_started = False
+            draw_start_screen()
 
         def draw_start_screen():
             ctx.clearRect(0, 0, WIDTH, HEIGHT)
@@ -111,6 +111,7 @@
                     ctx.fillStyle = "red"
                     ctx.font = "48px 'Press Start 2P'"
                     ctx.fillText("GAME OVER", WIDTH // 2, HEIGHT // 2)
+                    window.setTimeout(reset_game, 3000)
                 if len(enemies) == 0 and not game_over:
                     if level < MAX_LEVELS:
                         level_up()
@@ -119,6 +120,7 @@
                         ctx.font = "48px 'Press Start 2P'"
                         ctx.fillText("YOU WIN!", WIDTH // 2, HEIGHT // 2)
                         game_over = True
+                        window.setTimeout(reset_game, 3000)
 
         def update():
             global game_over, score, game_started, showing_level_title, ENEMY_SPEED
@@ -210,7 +212,6 @@
     </script>
 </body>
 </html>
-
 
 
 
