--- a/index.html
+++ b/index.html
@@ -46,14 +46,19 @@
         canvas = document["game-canvas"]
         ctx = canvas.getContext("2d")
 
-        def reset_game():
+        def initialize_game():
             global enemies, bullets, enemy_bullets, showing_level_title, ENEMY_SPEED, game_over, level, game_started
             enemies = [{"pos": [col * (ENEMY_SIZE + 10) + 50, row * (ENEMY_SIZE + 10) + 50], "img": faces[int(window.Math.random() * len(faces))]} for row in range(3) for col in range(8)]
             bullets = []
             enemy_bullets = []
-            showing_level_title = True
+            showing_level_title = False
             ENEMY_SPEED = 2 + level  # Increase enemy speed with level
             game_over = False
+            game_started = True
+
+        def reset_game():
+            global level, game_started
+            level = 1
             game_started = False
             draw_start_screen()
 
@@ -182,20 +187,19 @@
             level += 1
             showing_level_title = True
             draw_level_title()
-            window.setTimeout(reset_game, 1000)
+            window.setTimeout(initialize_game, 1000)
 
         def start_game():
             global showing_level_title
             showing_level_title = False
+            initialize_game()
 
         def move_player(event):
             global game_started, game_over
             if game_over:
                 return
             if event.keyCode == 32 and not game_started:  # Space key to start
-                game_started = True
-                level = 1  # Reset to level 1
-                reset_game()
+                start_game()
             elif game_started and not showing_level_title:
                 if event.keyCode == 37 and player_pos[0] > 0:  # Left arrow
                     player_pos[0] -= PLAYER_SPEED
