--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         ctx = canvas.getContext("2d")
 
         def initialize_game():
-            global enemies, bullets, enemy_bullets, showing_level_title, ENEMY_SPEED, game_over, level, game_started
+            global enemies, bullets, enemy_bullets, showing_level_title, ENEMY_SPEED, game_over, level, game_started, score
             enemies = [{"pos": [col * (ENEMY_SIZE + 10) + 50, row * (ENEMY_SIZE + 10) + 50], "img": faces[int(window.Math.random() * len(faces))]} for row in range(3) for col in range(8)]
             bullets = []
             enemy_bullets = []
@@ -55,12 +55,14 @@
             ENEMY_SPEED = 2 + level  # Increase enemy speed with level
             game_over = False
             game_started = True
+            score = 0
 
         def reset_game():
-            global level, game_started, game_over
+            global level, game_started, game_over, score
             level = 1
             game_over = False
             game_started = False
+            score = 0
             draw_start_screen()
 
         def draw_start_screen():
@@ -80,6 +82,14 @@
             ctx.fillStyle = "white"
             ctx.font = "48px 'Press Start 2P'"
             ctx.fillText(f"Level {level}", WIDTH // 2, HEIGHT // 2)
+
+        def draw_final_score():
+            ctx.clearRect(0, 0, WIDTH, HEIGHT)
+            draw_stars()
+            ctx.fillStyle = "white"
+            ctx.font = "48px 'Press Start 2P'"
+            ctx.textAlign = "center"
+            ctx.fillText(f"Final Score: {score}", WIDTH // 2, HEIGHT // 2)
 
         def draw_stars():
             ctx.fillStyle = "white"
@@ -113,11 +123,15 @@
                 ctx.fillStyle = "red"
                 for bullet in enemy_bullets:
                     ctx.fillRect(bullet[0], bullet[1], BULLET_SIZE, BULLET_SIZE)
+                ctx.fillStyle = "white"
+                ctx.font = "24px 'Press Start 2P'"
+                ctx.textAlign = "right"
+                ctx.fillText(f"Score: {score}", WIDTH - 20, 40)
                 if game_over:
                     ctx.fillStyle = "red"
                     ctx.font = "48px 'Press Start 2P'"
                     ctx.fillText("GAME OVER", WIDTH // 2, HEIGHT // 2)
-                    window.setTimeout(reset_game, 3000)
+                    window.setTimeout(show_final_score, 3000)
                 if len(enemies) == 0 and not game_over:
                     if level < MAX_LEVELS:
                         level_up()
@@ -126,7 +140,11 @@
                         ctx.font = "48px 'Press Start 2P'"
                         ctx.fillText("YOU WIN!", WIDTH // 2, HEIGHT // 2)
                         game_over = True
-                        window.setTimeout(reset_game, 3000)
+                        window.setTimeout(show_final_score, 3000)
+
+        def show_final_score():
+            draw_final_score()
+            window.setTimeout(reset_game, 3000)
 
         def update():
             global game_over, score, game_started, showing_level_title, ENEMY_SPEED
@@ -217,6 +235,7 @@
     </script>
 </body>
 </html>
+
 
 
 
