--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
             ctx.clearRect(0, 0, WIDTH, HEIGHT)
             move_stars()
             draw_stars()
-            ctx.drawImage(title_img, WIDTH // 2 - title_img.width // 2, HEIGHT // 3 - title_img.height // 2)
+            title_width = title_img.width
+            title_height = title_img.height
+            ctx.drawImage(title_img, WIDTH // 2 - title_width // 2, HEIGHT // 3 - title_height // 2)
             ctx.fillStyle = "white"
             ctx.font = "24px 'Press Start 2P'"
             ctx.textAlign = "center"
@@ -241,7 +243,6 @@
     </script>
 </body>
 </html>
-
 
 
 
