--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
             ctx.clearRect(0, 0, WIDTH, HEIGHT)
             move_stars()
             draw_stars()
-            title_width = title_img.width
-            title_height = title_img.height
-            ctx.drawImage(title_img, WIDTH // 2 - title_width // 2, HEIGHT // 3 - title_height // 2)
+            title_width = int(title_img.width)
+            title_height = int(title_img.height)
+            ctx.drawImage(title_img, (WIDTH - title_width) // 2, (HEIGHT // 3 - title_height // 2))
             ctx.fillStyle = "white"
             ctx.font = "24px 'Press Start 2P'"
             ctx.textAlign = "center"
@@ -243,6 +243,7 @@
     </script>
 </body>
 </html>
+
 
 
 
