--- a/index.html
+++ b/index.html
@@ -47,8 +47,6 @@
         canvas = document["game-canvas"]
         ctx = canvas.getContext("2d")
 
-        title_loaded = False
-
         def initialize_game():
             global enemies, bullets, enemy_bullets, showing_level_title, ENEMY_SPEED, game_over, level, game_started, score
             enemies = [{"pos": [col * (ENEMY_SIZE + 10) + 50, row * (ENEMY_SIZE + 10) + 50], "img": faces[int(window.Math.random() * len(faces))]} for row in range(3) for col in range(8)]
@@ -71,10 +69,7 @@
             ctx.clearRect(0, 0, WIDTH, HEIGHT)
             move_stars()
             draw_stars()
-            if title_loaded:
-                title_width = title_img.width
-                title_height = title_img.height
-                ctx.drawImage(title_img, (WIDTH - title_width) // 2, (HEIGHT // 3 - title_height // 2))
+            ctx.drawImage(title_img, (WIDTH - 1655 // 10) // 2, (HEIGHT // 3 - 134 // 10 // 2), 1655 // 10, 134 // 10)
             ctx.fillStyle = "white"
             ctx.font = "24px 'Press Start 2P'"
             ctx.textAlign = "center"
@@ -232,28 +227,16 @@
                 elif event.keyCode == 32:  # Space key to shoot
                     bullets.append([player_pos[0] + PLAYER_SIZE // 2 - BULLET_SIZE // 2, player_pos[1]])
 
-        def check_title_loaded(event):
-            global title_loaded
-            if title_img.complete:
-                title_loaded = True
-
-        title_img.bind('load', check_title_loaded)
-        window.setInterval(check_title_loaded, 100)
-
         document.bind("keydown", move_player)
         window.setInterval(update, 30)
         window.setInterval(enemy_shoot, 1000)  # Enemy attempts to shoot every second
+        window.setInterval(draw_start_screen, 30)  # Continuously draw the start screen to move stars
 
-        # Continuously draw the start screen to move stars
-        def animate_title_screen():
-            if not game_started:
-                draw_start_screen()
-                window.requestAnimationFrame(lambda x: animate_title_screen())
-
-        animate_title_screen()  # Start the animation loop for the title screen
+        draw_start_screen()  # Initial draw to show start screen
     </script>
 </body>
 </html>
+
 
 
 
