--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             ctx.clearRect(0, 0, WIDTH, HEIGHT)
             move_stars()
             draw_stars()
-            title_width, title_height = 1655 // 2, 134 // 2
+            title_width, title_height = 1655 // 2.5, 134 // 2.5
             ctx.drawImage(title_img, (WIDTH - title_width) // 2, (HEIGHT // 3 - title_height // 2), title_width, title_height)
             ctx.fillStyle = "white"
             ctx.font = "24px 'Press Start 2P'"
@@ -231,12 +231,18 @@
         document.bind("keydown", move_player)
         window.setInterval(update, 30)
         window.setInterval(enemy_shoot, 1000)  # Enemy attempts to shoot every second
-        window.setInterval(draw_start_screen, 30)  # Continuously draw the start screen to move stars
 
-        draw_start_screen()  # Initial draw to show start screen
+        # Continuously draw the start screen to move stars
+        def animate_title_screen():
+            if not game_started:
+                draw_start_screen()
+                window.requestAnimationFrame(lambda x: animate_title_screen())
+
+        animate_title_screen()  # Start the animation loop for the title screen
     </script>
 </body>
 </html>
+
 
 
 
