--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         BULLET_SPEED = 5
         ENEMY_BULLET_SPEED = 3
         MAX_LEVELS = 3
+        BOSS_HITS_REQUIRED = 10
 
         score = 0
         level = 1
@@ -37,9 +38,12 @@
         player_shot_cooldown = 500  # Cooldown time in milliseconds
 
         player_pos = [WIDTH // 2, HEIGHT - 2 * PLAYER_SIZE]
+        boss_pos = [WIDTH // 2 - ENEMY_SIZE // 2, 50]
+        boss_hits = 0
 
         spaceship_img = html.IMG(src="spaceship.png")
         title_img = html.IMG(src="title.png")
+        boss_img = html.IMG(src="boss.png")
         face_images = ["face_0.png", "face_1.png", "face_2.png", "face_3.png"]
         faces = [html.IMG(src=img) for img in face_images]
 
@@ -53,8 +57,12 @@
         background_audio = document["background-audio"]
 
         def initialize_game():
-            global enemies, bullets, enemy_bullets, showing_level_title, ENEMY_SPEED, game_over, level, game_started, score
-            enemies = [{"pos": [col * (ENEMY_SIZE + 10) + 50, row * (ENEMY_SIZE + 10) + 50], "img": faces[int(window.Math.random() * len(faces))]} for row in range(3) for col in range(8)]
+            global enemies, bullets, enemy_bullets, showing_level_title, ENEMY_SPEED, game_over, level, game_started, score, boss_hits
+            if level <= MAX_LEVELS:
+                enemies = [{"pos": [col * (ENEMY_SIZE + 10) + 50, row * (ENEMY_SIZE + 10) + 50], "img": faces[int(window.Math.random() * len(faces))]} for row in range(3) for col in range(8)]
+            else:
+                enemies = []
+                boss_hits = 0
             bullets = []
             enemy_bullets = []
             showing_level_title = False
@@ -89,7 +97,10 @@
             draw_stars()
             ctx.fillStyle = "white"
             ctx.font = "48px 'Press Start 2P'"
-            ctx.fillText(f"Level {level}", WIDTH // 2, HEIGHT // 2)
+            if level > MAX_LEVELS:
+                ctx.fillText("Final Boss!", WIDTH // 2, HEIGHT // 2)
+            else:
+                ctx.fillText(f"Level {level}", WIDTH // 2, HEIGHT // 2)
 
         def draw_final_score():
             ctx.clearRect(0, 0, WIDTH, HEIGHT)
@@ -113,7 +124,7 @@
                     star["x"] = window.Math.random() * WIDTH
 
         def draw():
-            global game_over, game_started, showing_level_title
+            global game_over, game_started, showing_level_title, boss_hits
             ctx.clearRect(0, 0, WIDTH, HEIGHT)
             move_stars()
             draw_stars()
@@ -124,8 +135,14 @@
             else:
                 if not game_over:
                     ctx.drawImage(spaceship_img, player_pos[0], player_pos[1], PLAYER_SIZE, PLAYER_SIZE)
-                for enemy in enemies:
-                    ctx.drawImage(enemy["img"], enemy["pos"][0], enemy["pos"][1], ENEMY_SIZE, ENEMY_SIZE)
+                if level > MAX_LEVELS:
+                    ctx.drawImage(boss_img, boss_pos[0], boss_pos[1], ENEMY_SIZE, ENEMY_SIZE)
+                    ctx.fillStyle = "white"
+                    ctx.font = "24px 'Press Start 2P'"
+                    ctx.fillText(f"Boss Hits: {boss_hits}", 20, 40)
+                else:
+                    for enemy in enemies:
+                        ctx.drawImage(enemy["img"], enemy["pos"][0], enemy["pos"][1], ENEMY_SIZE, ENEMY_SIZE)
                 ctx.fillStyle = "yellow"
                 for bullet in bullets:
                     ctx.fillRect(bullet[0], bullet[1], BULLET_SIZE, BULLET_SIZE)
@@ -141,22 +158,21 @@
                     ctx.font = "48px 'Press Start 2P'"
                     ctx.fillText("GAME OVER", WIDTH // 2, HEIGHT // 2)
                     window.setTimeout(show_final_score, 3000)
-                if len(enemies) == 0 and not game_over:
-                    if level < MAX_LEVELS:
-                        level_up()
-                    else:
-                        ctx.fillStyle = "green"
-                        ctx.font = "48px 'Press Start 2P'"
-                        ctx.fillText("YOU WIN!", WIDTH // 2, HEIGHT // 2)
-                        game_over = True
-                        window.setTimeout(show_final_score, 3000)
+                if len(enemies) == 0 and level <= MAX_LEVELS and not game_over:
+                    level_up()
+                if boss_hits >= BOSS_HITS_REQUIRED and not game_over:
+                    ctx.fillStyle = "green"
+                    ctx.font = "48px 'Press Start 2P'"
+                    ctx.fillText("YOU WIN!", WIDTH // 2, HEIGHT // 2)
+                    game_over = True
+                    window.setTimeout(show_final_score, 3000)
 
         def show_final_score():
             draw_final_score()
             window.setTimeout(reset_game, 3000)
 
         def update():
-            global game_over, score, game_started, showing_level_title, ENEMY_SPEED
+            global game_over, score, game_started, showing_level_title, ENEMY_SPEED, boss_hits
 
             if game_over or not game_started or showing_level_title:
                 return
@@ -171,34 +187,46 @@
                 if bullet[1] > HEIGHT:
                     enemy_bullets.remove(bullet)
 
-            for enemy in enemies[:]:
+            if level <= MAX_LEVELS:
+                for enemy in enemies[:]:
+                    for bullet in bullets[:]:
+                        if bullet[0] >= enemy["pos"][0] and bullet[0] <= enemy["pos"][0] + ENEMY_SIZE and bullet[1] >= enemy["pos"][1] and bullet[1] <= enemy["pos"][1] + ENEMY_SIZE:
+                            enemies.remove(enemy)
+                            bullets.remove(bullet)
+                            score += 1
+                            break
+            else:
                 for bullet in bullets[:]:
-                    if bullet[0] >= enemy["pos"][0] and bullet[0] <= enemy["pos"][0] + ENEMY_SIZE and bullet[1] >= enemy["pos"][1] and bullet[1] <= enemy["pos"][1] + ENEMY_SIZE:
-                        enemies.remove(enemy)
+                    if bullet[0] >= boss_pos[0] and bullet[0] <= boss_pos[0] + ENEMY_SIZE and bullet[1] >= boss_pos[1] and bullet[1] <= boss_pos[1] + ENEMY_SIZE:
                         bullets.remove(bullet)
-                        score += 1
-                        break
+                        boss_hits += 1
 
             for bullet in enemy_bullets[:]:
                 if bullet[0] >= player_pos[0] and bullet[0] <= player_pos[0] + PLAYER_SIZE and bullet[1] >= player_pos[1] and bullet[1] <= player_pos[1] + PLAYER_SIZE:
                     game_over = True
 
-            for enemy in enemies:
-                if (enemy["pos"][0] <= player_pos[0] <= enemy["pos"][0] + ENEMY_SIZE or
-                    enemy["pos"][0] <= player_pos[0] + PLAYER_SIZE <= enemy["pos"][0] + ENEMY_SIZE) and \
-                    (enemy["pos"][1] <= player_pos[1] <= enemy["pos"][1] + ENEMY_SIZE or
-                    enemy["pos"][1] <= player_pos[1] + PLAYER_SIZE <= enemy["pos"][1] + ENEMY_SIZE):
-                    game_over = True
-
-            move_down = False
-            for enemy in enemies:
-                enemy["pos"][0] += ENEMY_SPEED
-                if enemy["pos"][0] > WIDTH - ENEMY_SIZE or enemy["pos"][0] < 0:
-                    move_down = True
-            if move_down:
+            if level <= MAX_LEVELS:
                 for enemy in enemies:
-                    enemy["pos"][1] += ENEMY_SIZE
-                ENEMY_SPEED = -ENEMY_SPEED
+                    if (enemy["pos"][0] <= player_pos[0] <= enemy["pos"][0] + ENEMY_SIZE or
+                        enemy["pos"][0] <= player_pos[0] + PLAYER_SIZE <= enemy["pos"][0] + ENEMY_SIZE) and \
+                        (enemy["pos"][1] <= player_pos[1] <= enemy["pos"][1] + ENEMY_SIZE or
+                        enemy["pos"][1] <= player_pos[1] + PLAYER_SIZE <= enemy["pos"][1] + ENEMY_SIZE):
+                        game_over = True
+
+                move_down = False
+                for enemy in enemies:
+                    enemy["pos"][0] += ENEMY_SPEED
+                    if enemy["pos"][0] > WIDTH - ENEMY_SIZE or enemy["pos"][0] < 0:
+                        move_down = True
+                if move_down:
+                    for enemy in enemies:
+                        enemy["pos"][1] += ENEMY_SIZE
+                    ENEMY_SPEED = -ENEMY_SPEED
+            else:
+                boss_pos[0] += window.Math.random() * 10 - 5
+                boss_pos[1] += window.Math.random() * 5 - 2.5
+                boss_pos[0] = max(0, min(WIDTH - ENEMY_SIZE, boss_pos[0]))
+                boss_pos[1] = max(0, min(HEIGHT // 2, boss_pos[1]))
 
             draw()
 
@@ -206,9 +234,13 @@
             global game_over, game_started, showing_level_title
             if game_over or not game_started or showing_level_title:
                 return
-            for enemy in enemies:
-                if window.Math.random() < (0.05 + 0.01 * level):  # Adjust the probability as needed
-                    enemy_bullets.append([enemy["pos"][0] + ENEMY_SIZE // 2, enemy["pos"][1] + ENEMY_SIZE])
+            if level <= MAX_LEVELS:
+                for enemy in enemies:
+                    if window.Math.random() < (0.05 + 0.01 * level):  # Adjust the probability as needed
+                        enemy_bullets.append([enemy["pos"][0] + ENEMY_SIZE // 2, enemy["pos"][1] + ENEMY_SIZE])
+            else:
+                if window.Math.random() < 0.1:  # Adjust the probability as needed
+                    enemy_bullets.append([boss_pos[0] + ENEMY_SIZE // 2, boss_pos[1] + ENEMY_SIZE])
 
         def level_up():
             global level, showing_level_title
@@ -260,4 +292,3 @@
     </script>
 </body>
 </html>
-
