--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         WIDTH, HEIGHT = 800, 600
         PLAYER_SIZE = 50
         ENEMY_SIZE = 50
+        BOSS_SIZE = 100  # Increased boss size
         BULLET_SIZE = 10
         PLAYER_SPEED = 10
         BULLET_SPEED = 5
@@ -28,7 +29,7 @@
         BOSS_HITS_REQUIRED = 10
 
         score = 0
-        level = 1
+        level = MAX_LEVELS + 1  # Start directly at the boss fight
         game_over = False
         game_started = False
         showing_level_title = False
@@ -38,7 +39,7 @@
         player_shot_cooldown = 500  # Cooldown time in milliseconds
 
         player_pos = [WIDTH // 2, HEIGHT - 2 * PLAYER_SIZE]
-        boss_pos = [WIDTH // 2 - ENEMY_SIZE // 2, 50]
+        boss_pos = [WIDTH // 2 - BOSS_SIZE // 2, 50]
         boss_hits = 0
 
         spaceship_img = html.IMG(src="spaceship.png")
@@ -73,7 +74,7 @@
 
         def reset_game():
             global level, game_started, game_over, score
-            level = 1
+            level = MAX_LEVELS + 1  # Start directly at the boss fight
             game_over = False
             game_started = False
             score = 0
@@ -136,7 +137,7 @@
                 if not game_over:
                     ctx.drawImage(spaceship_img, player_pos[0], player_pos[1], PLAYER_SIZE, PLAYER_SIZE)
                 if level > MAX_LEVELS:
-                    ctx.drawImage(boss_img, boss_pos[0], boss_pos[1], ENEMY_SIZE, ENEMY_SIZE)
+                    ctx.drawImage(boss_img, boss_pos[0], boss_pos[1], BOSS_SIZE, BOSS_SIZE)
                     ctx.fillStyle = "white"
                     ctx.font = "24px 'Press Start 2P'"
                     ctx.fillText(f"Boss Hits: {boss_hits}", 20, 40)
@@ -197,7 +198,7 @@
                             break
             else:
                 for bullet in bullets[:]:
-                    if bullet[0] >= boss_pos[0] and bullet[0] <= boss_pos[0] + ENEMY_SIZE and bullet[1] >= boss_pos[1] and bullet[1] <= boss_pos[1] + ENEMY_SIZE:
+                    if bullet[0] >= boss_pos[0] and bullet[0] <= boss_pos[0] + BOSS_SIZE and bullet[1] >= boss_pos[1] and bullet[1] <= boss_pos[1] + BOSS_SIZE:
                         bullets.remove(bullet)
                         boss_hits += 1
 
@@ -223,9 +224,9 @@
                         enemy["pos"][1] += ENEMY_SIZE
                     ENEMY_SPEED = -ENEMY_SPEED
             else:
-                boss_pos[0] += window.Math.random() * 10 - 5
+                boss_pos[0] += window.Math.random() * 20 - 10  # Increase movement range
                 boss_pos[1] += window.Math.random() * 5 - 2.5
-                boss_pos[0] = max(0, min(WIDTH - ENEMY_SIZE, boss_pos[0]))
+                boss_pos[0] = max(0, min(WIDTH - BOSS_SIZE, boss_pos[0]))
                 boss_pos[1] = max(0, min(HEIGHT // 2, boss_pos[1]))
 
             draw()
@@ -239,8 +240,8 @@
                     if window.Math.random() < (0.05 + 0.01 * level):  # Adjust the probability as needed
                         enemy_bullets.append([enemy["pos"][0] + ENEMY_SIZE // 2, enemy["pos"][1] + ENEMY_SIZE])
             else:
-                if window.Math.random() < 0.1:  # Adjust the probability as needed
-                    enemy_bullets.append([boss_pos[0] + ENEMY_SIZE // 2, boss_pos[1] + ENEMY_SIZE])
+                if window.Math.random() < 0.2:  # Increase boss firing frequency
+                    enemy_bullets.append([boss_pos[0] + BOSS_SIZE // 2, boss_pos[1] + BOSS_SIZE])
 
         def level_up():
             global level, showing_level_title
@@ -279,7 +280,7 @@
 
         document.bind("keydown", move_player)
         window.setInterval(update, 30)
-        window.setInterval(enemy_shoot, 1000)  # Enemy attempts to shoot every second
+        window.setInterval(enemy_shoot, 500)  # Enemy attempts to shoot every half-second
         window.setInterval(toggle_flash_text, 1000)  # Toggle the flash text every second
 
         # Continuously draw the start screen to move stars
@@ -292,3 +293,4 @@
     </script>
 </body>
 </html>
+
